--- a/static/index.html
+++ b/static/index.html
@@ -12,13 +12,13 @@
         <meta name="twitter:description" content="Website of Gregory M. Roman. Senior Software Engineer. New York, NY." />
         <meta name="twitter:image" content="/images/romanwebnet-screenshot.png" />
         <meta name="twitter:image:alt" content="Screen shot of romanwebnet.com" />
-        <!-- <link rel="shortcut icon" href="/images/favicon.ico" /> -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+        <link rel="shortcut icon" href="/images/favicon.ico" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <header id="header" class="header">
-            <nav class="nav container" data-0p="padding: 20px 0;border-bottom-color:rgba(255, 255, 255, 0.25);" data-90p="padding: 0 0;border-bottom-color:rgba(255, 255, 255, 0);">
+            <nav class="nav container" data-0p="margin-top: 20px;padding: 20px 0;border-bottom-color:rgba(255, 255, 255, 0.25);" data-90p="margin-top: 0;padding: 0 0;border-bottom-color:rgba(255, 255, 255, 0);">
                 <a class="nav-item" href="/blog/" title="Blog">
                     <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-rss"></use></svg>
                     <span class="popover">Blog</span>
@@ -44,10 +44,10 @@
         <div class="home-page panel-scroller">
             <section class="panel-background">
                 <div class="home-blurb" data-0p="transform:translateX(-50%) translateY(-50%);opacity:1;" data-90p="transform:translateX(-50%) translateY(-200%);opacity:0;">
-                    <h1>Gregory M. Roman</h1>
-                    <h4>Software Engineer <br> New York, NY</h4>
-                    <h6></h6>
+                    <h1><b>G</b>regory <b>Roman</b></h1>
+                    <h4><b>S</b>oftware <b>E</b>ngineer</h4>
                 </div>
+                <h6 class="contact-info">Jersey City, NJ 07302 | greg@romanwebnet.com</h6>
                 <div class="arrow-down">
                     <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
                 </div>
