--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
             </nav>
         </header>
         <div class="home-page panel-scroller">
-            <section class="panel-background">
+            <section class="panel-background fg-white">
                 <div class="home-blurb" data-0p="transform:translateX(-50%) translateY(-50%);opacity:1;" data-90p="transform:translateX(-50%) translateY(-200%);opacity:0;">
                     <h1><b>G</b>regory <b>Roman</b></h1>
                     <h4><b>S</b>oftware <b>E</b>ngineer</h4>
@@ -55,9 +55,92 @@
             <section class="panel"></section>
             <section class="panel">
                 <div class="container">
+                    <!--
                     <h2 class="panel-heading">Technical Experience</h2>
                     <div class="technology-grid row">
                         <div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Javacript</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">CSS3</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">HTML5</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">jQuery</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Page Speed</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">SEO</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Mobile Web</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Bootstrap</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Node.js</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Backbone.js</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Gulp</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Sass</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">PHP</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">MVC</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">BrightScript</h4></div>
+                    </div> -->
+
+                    <h2 class="panel-heading">Skills</h2>
+                    <div class="flex-columns">
+                        <!-- TODO: Update with my skills -->
+                            <div class="column">
+                                <h3 class="column-label font-bold">Languages</h3>
+                                <ul>
+                                    <li>JavaScript (ES6)</li>
+                                    <li>TypeScript</li>
+                                    <li>HTML</li>
+                                    <li>CSS/Sass</li>
+                                    <li>Python</li>
+                                    <li>Java</li>
+                                    <li>SQL</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3 class="column-label font-bold">Frameworks</h3>
+                                <ul>
+                                    <li>Ember / Glimmer</li>
+                                    <li>Jekyll</li>
+                                    <li>D3</li>
+                                    <li>Node</li>
+                                    <li>Backbone</li>
+                                    <li>React</li>
+                                    <li>Cordova</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3 class="column-label font-bold">Tools</h3>
+                                <ul>
+                                    <li>Bash</li>
+                                    <li>Git &amp; Github</li>
+                                    <li>Gulp &amp; Grunt</li>
+                                    <li>Chrome DevTools</li>
+                                    <li>Postman</li>
+                                    <li>MongoDB</li>
+                                </ul>
+                            </div>
+                            <div class="column">
+                                <h3 class="column-label font-bold">Design</h3>
+                                <ul>
+                                    <li>Sketch</li>
+                                    <li>InDesign</li>
+                                    <li>InVision</li>
+                                    <li>Prototyping</li>
+                                    <li>User Testing</li>
+                                    <li>Typography</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2 class="panel-heading">Experience</h2>
+                        <div class="list">
+                            <div class="list-item flex-space">
+                                <div class="list-item-left">
+                                    <h4>Acme Corp - San Francisco</h4>
+                                    <p>
+                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    </p>
+                                </div>
+                                <div class="list-item-right">2004-2008</div>
+                            </div>
+                            <div class="list-item flex-space">
+                                <div class="list-item-left">
+                                    <h4>Acme Corp - San Francisco</h4>
+                                    <p>
+                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    </p>
+                                </div>
+                                <div class="list-item-right">2004-2008</div>
+                            </div>
+                            <div class="list-item flex-space">
+                                <div class="list-item-left">
+                                    <h4>Acme Corp - San Francisco</h4>
+                                    <p>
+                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    </p>
+                                </div>
+                                <div class="list-item-right">2004-2008</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
