--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
                     <h1><b>G</b>regory <b>Roman</b></h1>
                     <h4><b>S</b>oftware <b>E</b>ngineer</h4>
                 </div>
-                <h6 class="contact-info">Jersey City, NJ 07302 | greg@romanwebnet.com</h6>
+                <h6 class="contact-info">Jersey City, NJ 07302 | gregorymichaelroman@gmail.com</h6>
                 <div class="arrow-down">
                     <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
                 </div>
@@ -55,110 +55,100 @@
             <section class="panel"></section>
             <section class="panel">
                 <div class="container">
-                    <!--
-                    <h2 class="panel-heading">Technical Experience</h2>
-                    <div class="technology-grid row">
-                        <div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Javacript</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">CSS3</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">HTML5</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">jQuery</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Page Speed</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">SEO</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Mobile Web</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Bootstrap</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Node.js</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Backbone.js</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Gulp</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">Sass</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">PHP</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">MVC</h4></div><div class="col-m-6 col-t-4 "><h4 class="title animated" data-animation="swing">BrightScript</h4></div>
-                    </div> -->
-
+                    <h2 class="panel-heading">Background</h2>
+                    <p class="font-large">
+                        <!-- <img src="/images/IMG_0063.jpg"/> -->
+                        Hello, my name is Greg Roman and I'm a Software Engineer based in Jersey City, NJ.
+                        I am currently employed by AOL Inc. as a member of the <a href="http://alpha.aol.com" target="_blank">AOL Alpha</a> team.
+                        I have 8+ years of experience building modern, high performing websites and applications for nationally recognized brands.
+                        More recently, I have published multiple channels for <a href="https://www.roku.com/" target="_blank">Roku</a> and built prototypes for <a href="https://www.oculus.com/" target="_blank">Oculus Rift</a>.
+                        Feel free to <a title="Email" href="mailto:greg@romanwebnet.com">contact me</a> or go check me out on Twitter <a href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">@romanwebnet</a>
+                    </p>
                     <h2 class="panel-heading">Skills</h2>
                     <div class="flex-columns">
                         <!-- TODO: Update with my skills -->
-                            <div class="column">
-                                <h3 class="column-label font-bold">Languages</h3>
-                                <ul>
-                                    <li>JavaScript (ES6)</li>
-                                    <li>TypeScript</li>
-                                    <li>HTML</li>
-                                    <li>CSS/Sass</li>
-                                    <li>Python</li>
-                                    <li>Java</li>
-                                    <li>SQL</li>
-                                </ul>
-                            </div>
-                            <div class="column">
-                                <h3 class="column-label font-bold">Frameworks</h3>
-                                <ul>
-                                    <li>Ember / Glimmer</li>
-                                    <li>Jekyll</li>
-                                    <li>D3</li>
-                                    <li>Node</li>
-                                    <li>Backbone</li>
-                                    <li>React</li>
-                                    <li>Cordova</li>
-                                </ul>
-                            </div>
-                            <div class="column">
-                                <h3 class="column-label font-bold">Tools</h3>
-                                <ul>
-                                    <li>Bash</li>
-                                    <li>Git &amp; Github</li>
-                                    <li>Gulp &amp; Grunt</li>
-                                    <li>Chrome DevTools</li>
-                                    <li>Postman</li>
-                                    <li>MongoDB</li>
-                                </ul>
-                            </div>
-                            <div class="column">
-                                <h3 class="column-label font-bold">Design</h3>
-                                <ul>
-                                    <li>Sketch</li>
-                                    <li>InDesign</li>
-                                    <li>InVision</li>
-                                    <li>Prototyping</li>
-                                    <li>User Testing</li>
-                                    <li>Typography</li>
-                                </ul>
-                            </div>
+                        <div class="column">
+                            <h3 class="column-label font-bold">Languages</h3>
+                            <ul>
+                                <li>JavaScript (ES6)</li>
+                                <li>TypeScript</li>
+                                <li>HTML</li>
+                                <li>CSS/Sass</li>
+                                <li>Python</li>
+                                <li>Java</li>
+                                <li>SQL</li>
+                            </ul>
                         </div>
-                        <h2 class="panel-heading">Experience</h2>
-                        <div class="list">
-                            <div class="list-item flex-space">
-                                <div class="list-item-left">
-                                    <h4>Acme Corp - San Francisco</h4>
-                                    <p>
-                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
-                                    </p>
-                                </div>
-                                <div class="list-item-right">2004-2008</div>
+                        <div class="column">
+                            <h3 class="column-label font-bold">Frameworks</h3>
+                            <ul>
+                                <li>Ember / Glimmer</li>
+                                <li>Jekyll</li>
+                                <li>D3</li>
+                                <li>Node</li>
+                                <li>Backbone</li>
+                                <li>React</li>
+                                <li>Cordova</li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="column-label font-bold">Tools</h3>
+                            <ul>
+                                <li>Bash</li>
+                                <li>Git &amp; Github</li>
+                                <li>Gulp &amp; Grunt</li>
+                                <li>Chrome DevTools</li>
+                                <li>Postman</li>
+                                <li>MongoDB</li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <h3 class="column-label font-bold">Design</h3>
+                            <ul>
+                                <li>Sketch</li>
+                                <li>InDesign</li>
+                                <li>InVision</li>
+                                <li>Prototyping</li>
+                                <li>User Testing</li>
+                                <li>Typography</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h2 class="panel-heading">Experience</h2>
+                    <div class="list">
+                        <div class="list-item flex-space">
+                            <div class="list-item-left">
+                                <h4>Acme Corp - San Francisco</h4>
+                                <p>
+                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                </p>
                             </div>
-                            <div class="list-item flex-space">
-                                <div class="list-item-left">
-                                    <h4>Acme Corp - San Francisco</h4>
-                                    <p>
-                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
-                                    </p>
-                                </div>
-                                <div class="list-item-right">2004-2008</div>
+                            <div class="list-item-right">2004-2008</div>
+                        </div>
+                        <div class="list-item flex-space">
+                            <div class="list-item-left">
+                                <h4>Acme Corp - San Francisco</h4>
+                                <p>
+                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                </p>
                             </div>
-                            <div class="list-item flex-space">
-                                <div class="list-item-left">
-                                    <h4>Acme Corp - San Francisco</h4>
-                                    <p>
-                                        Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
-                                    </p>
-                                </div>
-                                <div class="list-item-right">2004-2008</div>
+                            <div class="list-item-right">2004-2008</div>
+                        </div>
+                        <div class="list-item flex-space">
+                            <div class="list-item-left">
+                                <h4>Acme Corp - San Francisco</h4>
+                                <p>
+                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                </p>
                             </div>
+                            <div class="list-item-right">2004-2008</div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="panel">
                 <div class="container">
-                    <div class="home-bio">
-                        <div class="img">
-                            <img src="/images/IMG_0063.jpg"/>
-                        </div>
-                        <p class="copy">
-                            <!-- Add more external links -->
-                            Hello, my name is Greg Roman and I'm a Software Engineer based in New York City.
-                            I am currently employed by AOL Inc. as a member of the <a href="http://alpha.aol.com" target="_blank">AOL Alpha</a> team.
-                            I have 8+ years of experience building modern, high performing websites and applications for nationally recognized brands.
-                            More recently, I have published multiple channels for <a href="https://www.roku.com/" target="_blank">Roku</a> and built prototypes for <a href="https://www.oculus.com/" target="_blank">Oculus Rift</a>.
-                            Feel free to <a title="Email" href="mailto:greg@romanwebnet.com">contact me</a> or go check me out on Twitter <a href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">@romanwebnet</a>
-                        </p>
-                    </div>
+                    <div class="panel-heading">Code Samples</div>
                 </div>
             </section>
         </div>
