--- a/static/index.html
+++ b/static/index.html
@@ -53,7 +53,7 @@
                 </div>
             </section>
             <section class="panel"></section>
-            <section class="panel">
+            <section class="panel bg-white">
                 <div class="container">
                     <h2 class="panel-heading">Background</h2>
                     <p class="font-large">
@@ -146,10 +146,16 @@
                     </div>
                 </div>
             </section>
-            <section class="panel">
+            <section class="panel bg-gray-lightest">
                 <div class="container">
                     <div class="panel-heading">Code Samples</div>
                 </div>
+            </section>
+            <section class="panel bg-gray-darker">
+                <footer class="footer container">
+                    &copy;2018 Romanwebnet.com. All rights reserved.
+                    <a class="fg-white back-to-top" href="#" onclick="window.scroll(0, 0);return false;">Back to top</a>
+                </footer>
             </section>
         </div>
         <div class="hide">
