More design cleanup

--- a/static/index.html
+++ b/static/index.html
@@ -55,100 +55,153 @@
             <section class="panel"></section>
             <section class="panel bg-white">
                 <div class="container">
-                    <h2 class="panel-heading">Background</h2>
-                    <p class="font-large">
-                        <!-- <img src="/images/IMG_0063.jpg"/> -->
+                    <h2 class="panel-heading bb-gray-lightest">Background</h2>
+                    <p class="bio font-large">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac purus quam. Vestibulum fringilla dictum augue ac euismod. Praesent bibendum orci quis turpis tristique, lacinia ullamcorper purus efficitur. Aenean euismod velit tincidunt odio facilisis volutpat. Aliquam sed blandit metus. Donec a ligula elit. Quisque tristique est lectus, id elementum nunc dapibus sit amet. Vestibulum eget dui ut lacus tempus.
+                        <!--
                         Hello, my name is Greg Roman and I'm a Software Engineer based in Jersey City, NJ.
                         I am currently employed by AOL Inc. as a member of the <a href="http://alpha.aol.com" target="_blank">AOL Alpha</a> team.
                         I have 8+ years of experience building modern, high performing websites and applications for nationally recognized brands.
                         More recently, I have published multiple channels for <a href="https://www.roku.com/" target="_blank">Roku</a> and built prototypes for <a href="https://www.oculus.com/" target="_blank">Oculus Rift</a>.
                         Feel free to <a title="Email" href="mailto:greg@romanwebnet.com">contact me</a> or go check me out on Twitter <a href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">@romanwebnet</a>
+                        -->
                     </p>
-                    <h2 class="panel-heading">Skills</h2>
+                    <h2 class="panel-heading bb-gray-lightest">Skills</h2>
                     <div class="flex-columns">
-                        <!-- TODO: Update with my skills -->
                         <div class="column">
                             <h3 class="column-label font-bold">Languages</h3>
                             <ul>
-                                <li>JavaScript (ES6)</li>
-                                <li>TypeScript</li>
-                                <li>HTML</li>
+                                <li>JavaScript (ES5/ES6)</li>
                                 <li>CSS/Sass</li>
-                                <li>Python</li>
-                                <li>Java</li>
-                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>PHP</li>
+                                <li>BrightScript</li>
                             </ul>
                         </div>
                         <div class="column">
-                            <h3 class="column-label font-bold">Frameworks</h3>
+                            <h3 class="column-label font-bold">Frameworks/Libraries</h3>
                             <ul>
-                                <li>Ember / Glimmer</li>
-                                <li>Jekyll</li>
-                                <li>D3</li>
+                                <li>Vue</li>
                                 <li>Node</li>
-                                <li>Backbone</li>
+                                <li>Laravel</li>
                                 <li>React</li>
-                                <li>Cordova</li>
+                                <li>Backbone</li>
+                                <li>Bootstrap</li>
+                                <!-- <li>D3</li> -->
                             </ul>
                         </div>
                         <div class="column">
                             <h3 class="column-label font-bold">Tools</h3>
                             <ul>
                                 <li>Bash</li>
-                                <li>Git &amp; Github</li>
+                                <li>Git</li>
+                                <li>npm &amp; yarn</li>
                                 <li>Gulp &amp; Grunt</li>
-                                <li>Chrome DevTools</li>
-                                <li>Postman</li>
-                                <li>MongoDB</li>
+                                <li>Webpack</li>
+                                <li>Vuex &amp; Redux</li>
+                                <!-- <li>MongoDB</li> -->
                             </ul>
                         </div>
                         <div class="column">
                             <h3 class="column-label font-bold">Design</h3>
                             <ul>
                                 <li>Sketch</li>
+                                <li>Photoshop</li>
+                                <li>After Effects</li>
                                 <li>InDesign</li>
-                                <li>InVision</li>
-                                <li>Prototyping</li>
-                                <li>User Testing</li>
-                                <li>Typography</li>
                             </ul>
                         </div>
                     </div>
-                    <h2 class="panel-heading">Experience</h2>
+                    <h2 class="panel-heading bb-gray-lightest">Experience</h2>
                     <div class="list">
-                        <div class="list-item flex-space">
+                        <div class="list-item">
                             <div class="list-item-left">
-                                <h4>Acme Corp - San Francisco</h4>
+                                <h4>AOL/Oath - New York, NY</h4>
+                                <h5>Senior Software Engineer</h5>
                                 <p>
-                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    Lead front-end engineer for AOL’s research and development team, AOL Alpha.  Responsible for building various web applications for client and server, as well as native applications for Roku.
                                 </p>
                             </div>
-                            <div class="list-item-right">2004-2008</div>
+                            <div class="h5 list-item-right">2014 - present</div>
                         </div>
-                        <div class="list-item flex-space">
+                        <div class="list-item">
                             <div class="list-item-left">
-                                <h4>Acme Corp - San Francisco</h4>
+                                <h4>AOL - Dulles, VA</h4>
+                                <h5>Software Engineer</h5>
                                 <p>
-                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    Lead front-end engineer for AOL Money &amp; Finance websites: Daily Finance, AOL Jobs and AOL Real Estate.
                                 </p>
                             </div>
-                            <div class="list-item-right">2004-2008</div>
+                            <div class="h5 list-item-right">2011-2014</div>
                         </div>
-                        <div class="list-item flex-space">
+                        <div class="list-item">
                             <div class="list-item-left">
-                                <h4>Acme Corp - San Francisco</h4>
+                                <h4>LS Advertising - Mahwah, NJ</h4>
+                                <h5>Developer</h5>
                                 <p>
-                                    Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish. Did something that was really important and it made my career flourish.
+                                    Software developer, responsible for building "web-to-print" applications for customers, as well as internal reporting and administrative tools.
                                 </p>
                             </div>
-                            <div class="list-item-right">2004-2008</div>
+                            <div class="h5 list-item-right">2008-2011</div>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="panel bg-gray-lightest">
                 <div class="container">
-                    <div class="panel-heading">Code Samples</div>
+                    <h2 class="panel-heading bb-gray-dark">Pinned Repositories</h2>
+                    <div class="list repos">
+                        <div class="list-item repo">
+                            <div class="list-item-left">
+                                <h4 class="title">
+                                    <a target="_blank" href="https://github.com/groman00/vue-pwa-starter" title="Vue PWA Starter">Vue PWA Starter</a>
+                                </h4>
+                                <p class="description">A simple boilerplate to start building progressive web apps with Vue js.</p>
+                                <h5 class="techs">Javascript, Vue, Progressive Web Apps, Webpack</h5>
+                            </div>
+                            <h5 class="list-item-right">
+                                <a target="_blank" href="https://github.com/groman00/vue-pwa-starter" title="View on Github">View on Github</a>
+                            </h5>
+                        </div>
+                        <div class="list-item repo">
+                            <div class="list-item-left">
+                                <h4 class="title">
+                                    <a target="_blank" href="https://github.com/groman00/vue-music-box" title="Vue Music Box">Vue Music Box</a>
+                                </h4>
+                                <p class="description">A music box built with Laravel and Vue.js.</p>
+                                <h5 class="techs">Javascript, Vue, Laravel</h5>
+                            </div>
+                            <h5 class="list-item-right">
+                                <a target="_blank" href="https://github.com/groman00/vue-music-box" title="View on Github">View on Github</a>
+                            </h5>
+                        </div>
+
+                        <div class="list-item repo">
+                            <div class="list-item-left">
+                                <h4 class="title">
+                                    <a target="_blank" href="https://github.com/groman00/vue-keyboard" title="Vue Keyboard">Vue Keyboard</a>
+                                </h4>
+                                <p class="description">Virtual keyboard using Vue js and the Web Audio API.</p>
+                                <h5 class="techs">Javascript, Vue, Web Audio API</h5>
+                            </div>
+                            <h5 class="list-item-right">
+                                <a class="linkout" target="_blank" href="https://github.com/groman00/vue-keyboard" title="View on Github">View on Github</a>
+                            </h5>
+                        </div>
+
+                        <div class="list-item repo">
+                            <div class="list-item-left">
+                                <h4 class="title">
+                                    <a target="_blank" href="https://github.com/groman00/roku-remote" title="Vue PWA Starter">Roku Remote</a>
+                                </h4>
+                                <p class="description">A web version of the Roku&reg; remote control.</p>
+                                <h5 class="techs">Javascript, Node, Express, Socket.io</h5>
+                            </div>
+                            <h5 class="list-item-right">
+                                <a class="linkout" target="_blank" href="https://github.com/groman00/roku-remote" title="View on Github">View on Github</a>
+                            </h5>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="panel bg-gray-darker">
