Removed unused files.  Disabled all media queries, pending further responsive updates.

--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
                     <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-linkedin"></use></svg>
                     <span class="popover">LinkedIn</span>
                 </a>
-                <a class="nav-item" href="mailto:greg@romanwebnet.com" title="Email">
+                <a class="nav-item" href="mailto:gregorymichaelroman@gmail.com" title="Email">
                     <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-email"></use></svg>
                     <span class="popover">Email</span>
                 </a>
