--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
     <body>
         <header id="header" class="header">
             <nav class="nav container" data-0p="margin-top: 20px;padding: 20px 0;border-bottom-color:rgba(255, 255, 255, 0.25);" data-90p="margin-top: 0;padding: 0 0;border-bottom-color:rgba(255, 255, 255, 0);">
-                <a class="nav-item" href="/blog/" title="Blog">
+                <a class="nav-item" href="https://medium.com/@romanwebnet" title="Blog" target="_blank">
                     <svg class="icon" data-0p="height:90%;" data-90p="height:50%;"><use xlink:href="#icon-rss"></use></svg>
                     <span class="popover">Blog</span>
                 </a>
@@ -56,7 +56,7 @@
             <section class="panel bg-white">
                 <div class="container">
                     <h2 class="panel-heading bb-gray-lightest">Background</h2>
-                    <p class="bio font-large">
+                    <p class="bio">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac purus quam. Vestibulum fringilla dictum augue ac euismod. Praesent bibendum orci quis turpis tristique, lacinia ullamcorper purus efficitur. Aenean euismod velit tincidunt odio facilisis volutpat. Aliquam sed blandit metus. Donec a ligula elit. Quisque tristique est lectus, id elementum nunc dapibus sit amet. Vestibulum eget dui ut lacus tempus.
                         <!--
                         Hello, my name is Greg Roman and I'm a Software Engineer based in Jersey City, NJ.
@@ -67,9 +67,9 @@
                         -->
                     </p>
                     <h2 class="panel-heading bb-gray-lightest">Skills</h2>
-                    <div class="flex-columns">
+                    <div class="skills flex-columns">
                         <div class="column">
-                            <h3 class="column-label font-bold">Languages</h3>
+                            <h3 class="font-bold">Languages</h3>
                             <ul>
                                 <li>JavaScript (ES5/ES6)</li>
                                 <li>CSS/Sass</li>
@@ -79,7 +79,7 @@
                             </ul>
                         </div>
                         <div class="column">
-                            <h3 class="column-label font-bold">Frameworks/Libraries</h3>
+                            <h3 class="font-bold">Frameworks/Libraries</h3>
                             <ul>
                                 <li>Vue</li>
                                 <li>Node</li>
@@ -87,11 +87,10 @@
                                 <li>React</li>
                                 <li>Backbone</li>
                                 <li>Bootstrap</li>
-                                <!-- <li>D3</li> -->
                             </ul>
                         </div>
                         <div class="column">
-                            <h3 class="column-label font-bold">Tools</h3>
+                            <h3 class="font-bold">Tools</h3>
                             <ul>
                                 <li>Bash</li>
                                 <li>Git</li>
@@ -99,11 +98,10 @@
                                 <li>Gulp &amp; Grunt</li>
                                 <li>Webpack</li>
                                 <li>Vuex &amp; Redux</li>
-                                <!-- <li>MongoDB</li> -->
                             </ul>
                         </div>
                         <div class="column">
-                            <h3 class="column-label font-bold">Design</h3>
+                            <h3 class="font-bold">Design</h3>
                             <ul>
                                 <li>Sketch</li>
                                 <li>Photoshop</li>
@@ -122,7 +120,7 @@
                                     Lead front-end engineer for AOL’s research and development team, AOL Alpha.  Responsible for building various web applications for client and server, as well as native applications for Roku.
                                 </p>
                             </div>
-                            <div class="h5 list-item-right">2014 - present</div>
+                            <div class="h5 list-item-right"><i>2014 - present</i></div>
                         </div>
                         <div class="list-item">
                             <div class="list-item-left">
@@ -132,7 +130,7 @@
                                     Lead front-end engineer for AOL Money &amp; Finance websites: Daily Finance, AOL Jobs and AOL Real Estate.
                                 </p>
                             </div>
-                            <div class="h5 list-item-right">2011-2014</div>
+                            <div class="h5 list-item-right"><i>2011-2014</i></div>
                         </div>
                         <div class="list-item">
                             <div class="list-item-left">
@@ -142,7 +140,7 @@
                                     Software developer, responsible for building "web-to-print" applications for customers, as well as internal reporting and administrative tools.
                                 </p>
                             </div>
-                            <div class="h5 list-item-right">2008-2011</div>
+                            <div class="h5 list-item-right"><i>2008-2011</i></div>
                         </div>
                     </div>
                 </div>
@@ -185,7 +183,7 @@
                                 <h5 class="techs">Javascript, Vue, Web Audio API</h5>
                             </div>
                             <h5 class="list-item-right">
-                                <a class="linkout" target="_blank" href="https://github.com/groman00/vue-keyboard" title="View on Github">View on Github</a>
+                                <a target="_blank" href="https://github.com/groman00/vue-keyboard" title="View on Github">View on Github</a>
                             </h5>
                         </div>
 
@@ -198,7 +196,7 @@
                                 <h5 class="techs">Javascript, Node, Express, Socket.io</h5>
                             </div>
                             <h5 class="list-item-right">
-                                <a class="linkout" target="_blank" href="https://github.com/groman00/roku-remote" title="View on Github">View on Github</a>
+                                <a target="_blank" href="https://github.com/groman00/roku-remote" title="View on Github">View on Github</a>
                             </h5>
                         </div>
                     </div>
