more design cleanup.

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
                 </a>
             </nav>
         </header>
-        <div class="home-page panel-scroller">
+        <div id="skrollr-body" class="home-page panel-scroller">
             <section class="panel-background fg-white">
                 <div class="home-blurb" data-0p="transform:translateX(-50%) translateY(-50%);opacity:1;" data-90p="transform:translateX(-50%) translateY(-200%);opacity:0;">
                     <h1><b>G</b>regory <b>Roman</b></h1>
@@ -79,7 +79,7 @@
                             </ul>
                         </div>
                         <div class="column">
-                            <h3 class="font-bold">Frameworks/Libraries</h3>
+                            <h3 class="font-bold">Frameworks</h3>
                             <ul>
                                 <li>Vue</li>
                                 <li>Node</li>
@@ -106,12 +106,12 @@
                                 <li>Sketch</li>
                                 <li>Photoshop</li>
                                 <li>After Effects</li>
-                                <li>InDesign</li>
+                                <li>Illustrator</li>
                             </ul>
                         </div>
                     </div>
                     <h2 class="panel-heading bb-gray-lightest">Experience</h2>
-                    <div class="list">
+                    <div class="experience list">
                         <div class="list-item">
                             <div class="list-item-left">
                                 <h4>AOL/Oath - New York, NY</h4>
