--- a/static/index.html
+++ b/static/index.html
@@ -41,17 +41,17 @@
                 </a>
             </nav>
         </header>
-        <div id="skrollr-body" class="home-page panel-scroller">
-            <section class="panel-background fg-white">
-                <div class="home-blurb" data-0p="transform:translateX(-50%) translateY(-50%);opacity:1;" data-90p="transform:translateX(-50%) translateY(-200%);opacity:0;">
-                    <h1><b>G</b>regory <b>Roman</b></h1>
-                    <h4><b>S</b>oftware <b>E</b>ngineer</h4>
-                </div>
-                <h6 class="contact-info">Jersey City, NJ 07302 | gregorymichaelroman@gmail.com</h6>
-                <div class="arrow-down">
-                    <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
-                </div>
-            </section>
+        <div class="home-page fg-white">
+            <div class="home-blurb" data-0p="transform:translateX(-50%) translateY(-50%);opacity:1;" data-90p="transform:translateX(-50%) translateY(-200%);opacity:0;">
+                <h1><b>G</b>regory <b>Roman</b></h1>
+                <h4><b>S</b>oftware <b>E</b>ngineer</h4>
+            </div>
+            <h6 class="contact-info">Jersey City, NJ 07302 | gregorymichaelroman@gmail.com</h6>
+            <div class="arrow-down">
+                <svg class="icon bounce"><use xlink:href="#icon-chevron-down"></use></svg>
+            </div>
+        </div>
+        <div class="panel-scroller">
             <section class="panel"></section>
             <section class="panel bg-white">
                 <div class="container">
