--- a/static/index.html
+++ b/static/index.html
@@ -57,14 +57,10 @@
                 <div class="container">
                     <h2 class="panel-heading bb-gray-lightest">Background</h2>
                     <p class="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac purus quam. Vestibulum fringilla dictum augue ac euismod. Praesent bibendum orci quis turpis tristique, lacinia ullamcorper purus efficitur. Aenean euismod velit tincidunt odio facilisis volutpat. Aliquam sed blandit metus. Donec a ligula elit. Quisque tristique est lectus, id elementum nunc dapibus sit amet. Vestibulum eget dui ut lacus tempus.
-                        <!--
-                        Hello, my name is Greg Roman and I'm a Software Engineer based in Jersey City, NJ.
-                        I am currently employed by AOL Inc. as a member of the <a href="http://alpha.aol.com" target="_blank">AOL Alpha</a> team.
-                        I have 8+ years of experience building modern, high performing websites and applications for nationally recognized brands.
-                        More recently, I have published multiple channels for <a href="https://www.roku.com/" target="_blank">Roku</a> and built prototypes for <a href="https://www.oculus.com/" target="_blank">Oculus Rift</a>.
-                        Feel free to <a title="Email" href="mailto:greg@romanwebnet.com">contact me</a> or go check me out on Twitter <a href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">@romanwebnet</a>
-                        -->
+                        Hello, my name is Greg Roman and I'm a software engineer based in Jersey City, NJ.  I have a decade's worth of
+                        experience building modern, high performing websites and applications for nationally recognized brands.  I specialize in
+                        full-stack javascript applications, and also have experience working with PHP, Java and Roku&reg; channel development in Brightscript.  Please feel free
+                        to <a title="Email" href="mailto:gregorymichaelroman@gmail.com">contact</a> me or follow me on Twitter <a href="https://twitter.com/romanwebnet" title="Twitter" target="_blank">@romanwebnet</a>.
                     </p>
                     <h2 class="panel-heading bb-gray-lightest">Skills</h2>
                     <div class="skills flex-columns">
@@ -117,7 +113,7 @@
                                 <h4>AOL/Oath - New York, NY</h4>
                                 <h5>Senior Software Engineer</h5>
                                 <p>
-                                    Lead front-end engineer for AOL’s research and development team, AOL Alpha.  Responsible for building various web applications for client and server, as well as native applications for Roku.
+                                    Lead front-end engineer for AOL’s research and development team, AOL Alpha.  Responsible for building various web applications for client and server, as well as native applications for Roku&reg;.
                                 </p>
                             </div>
                             <div class="h5 list-item-right"><i>2014 - present</i></div>
